tests/baselines/reference/ambientDeclarationsPatterns_merging1.errors.txt
testB.ts(1,22): error TS2305: Module '"*.foo"' has no exported member 'onlyInA'.


==== types.ts (0 errors) ====
    declare module "*.foo" {
      let everywhere: string;
    }
    
    
==== testA.ts (0 errors) ====
    import { everywhere, onlyInA } from "a.foo";
    declare module "a.foo" {
      let onlyInA: number;
    }
    
==== testB.ts (1 errors) ====
    import { everywhere, onlyInA } from "b.foo"; // Error
                         ~~~~~~~
!!! error TS2305: Module '"*.foo"' has no exported member 'onlyInA'.
    